Style fixes, alignment, and resume styling.

--- a/css/style.css
+++ b/css/style.css
@@ -585,13 +585,13 @@ h6 {
   min-height: 40rem;
 }
 .resume-content {
-  align-items: center;
   flex: 1;
   display: flex;
   flex-direction: column;
   min-height: 40rem;
   padding-top: 3rem;
   padding-bottom: 3rem;
+  padding-left: 5rem;
 }
 .par-case {
   font-size: 1.6rem;
@@ -609,6 +609,12 @@ h6 {
   justify-content: center;
   display: flex;
   flex: 1;
+}
+.center-resume {
+  justify-content: center;
+  display: flex;
+  flex: 1;
+  padding-bottom: 5rem;
 }
 .responsive-case {
   max-width: 100%;
@@ -692,6 +698,15 @@ h6 {
   }
   .jazzyBloc {
     flex-direction: row;
+  }
+  .resume-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    min-height: 40rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    padding-left: 18rem;
   }
   .right {
     justify-content: flex-end;
@@ -814,6 +829,9 @@ h6 {
     flex-direction: row;
     padding-left: 10rem;
     padding-right: 10rem;
+  }
+  .resume-content {
+    padding-left: 10rem;
   }
   .fp {
     font-size: 1.6rem;
